# skat_list_manager

./: .gitignore  CMakeLists.txt  README.md  create_all_skat_tables.sql  database_api.cpp  skat.cpp  skat.h  sql_games.sql  terminal_interface.cpp  terminal_interface.h
assets/: command_usages.json
assets/create_database/: create_all_skat_tables.sql  sql_games.sql
assets/graphics/icons/: icons.qrc
include/: add_entry_dialog.h  central_view.h  data_service.h  database_api.h  entries_table_model.h  main_window.h  player_stats.h  players_dialog.h  skat.h  statistics.h  terminal_interface.h
src/: add_entry_dialog.cpp  central_view.cpp  data_service.cpp  database_api.cpp  entries_table_model.cpp  main.cpp  main_qt.cpp  main_window.cpp  player_stats.cpp  players_dialog.cpp  statistics.cpp  terminal_interface.cpp
